--- a/listableviewdemo/src/main/res/layout/listtableview.xml
+++ b/listableviewdemo/src/main/res/layout/listtableview.xml
@@ -7,6 +7,7 @@
     android:background="@android:color/white">
     <LinearLayout
         android:orientation="vertical"
+        android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <com.custom.view.ListTableView
